--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Contato - Barbearia Alura</title>
+		<title>Contato</title>
 
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" href="styles/style.css">
@@ -10,13 +10,11 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="imgs/cabelo-masculino-curto.png" alt="Logo da Barbearia Alura"></h1>
+				<a class="index" href="index.html"><h1>Barbearia</h1></a>
 
 				<nav>
-					<ul>
-						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contato.html">Contato</a></li>
-					</ul>
+					<a href="produtos.html">Produtos</a>
+					<a href="servicos.html">Serviços</a>
 				</nav>
 			</div>
 		</header>
