--- a/servicos.html
+++ b/servicos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Produtos</title>
+		<title>Serviços</title>
 
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" href="styles/style.css">
@@ -13,7 +13,7 @@
 				<a class="index" href="index.html"><h1>Barbearia</h1></a>
 
 				<nav>
-					<a href="servicos.html">Serviços</a>
+					<a href="produtos.html">Produtos</a>
 					<a href="contato.html">Contato</a>
 				</nav>
 			</div>
@@ -22,21 +22,21 @@
 		<main>
 			<ul class="produtos">
 				<li>
-					<h2>Cabelo</h2>
-					<img src="imgs/cabelo.jpg">
-					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<h2>Quimica Capilar</h2>
+					<img src="imgs/03-Quimica.png">
+					<!-- <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p> -->
 					<p class="produto-preco">R$ 25,00</p>
 				</li>
 				<li>
-					<h2>Barba</h2>
-					<img src="imgs/barba.jpg">
-					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<h2>Tatuagem</h2>
+					<img src="imgs/16-Tatuagem.png">
+					<!-- <p class="produto-descricao">Corte e desenho profissional de barba</p> -->
 					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
-					<h2>Cabelo + Barba</h2>
-					<img src="imgs/cabelo+barba.jpg">
-					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<h2>Massagem</h2>
+					<img src="imgs/09-Massagem.png">
+					<!-- <p class="produto-descricao">Pacote completo de cabelo e barba</p> -->
 					<p class="produto-preco">R$ 35,00</p>
 				</li>
 			</ul>
