--- a/contato.html
+++ b/contato.html
@@ -13,6 +13,7 @@
 				<a class="index" href="index.html"><h1>Barbearia</h1></a>
 
 				<nav>
+					<a href="index.html">Início</a>
 					<a href="produtos.html">Produtos</a>
 					<a href="servicos.html">Serviços</a>
 				</nav>
