--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="styles/back.css">
 	</head>
 	<body>
 		<header>
