--- a/servicos.html
+++ b/servicos.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="styles/back.css">
 	</head>
 	<body>
 		<header>
@@ -21,7 +22,7 @@
 		</header>
 
 		<main>
-			<ul class="produtos">
+			<ul class="produtos prd_servico">
 				<li>
 					<h2>Quimica Capilar</h2>
 					<img src="imgs/03-Quimica.png">
